# Task-it

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
task-api-bruno/: Create user.bru  Get user.bru  Get users.bru  bruno.json
task-api-bruno/account/: Create account.bru  Get account.bru  Get accounts.bru
task_api/: app_launcher.py
task_api/config/context/: application_context.py  development_context.py  production_context.py  quality_assurance_context.py
task_api/config/logger/: logger.py
task_api/core/account/api/: account_resource.py
task_api/core/account/application/: account_service.py
task_api/core/account/domain/: account.py  account_factory.py  account_id.py  account_repository.py
task_api/core/account/infra/: InMemoryAccountRepository.py
task_api/http/handler/: invalid_input_exception_handler.py  item_already_exists_exception_handler.py  server_config_exception_handler.py  server_exception_handler.py  variant_also_negotiate_handler.py
task_api/http/response/: exception_response.py
task_it/: app_launcher.py
task_it/config/: service_locator.py
task_it/config/context/: application_context.py  development_context.py  environment.py  production_context.py  quality_assurance_context.py
task_it/config/logger/: logger.py  logger_type.py
task_it/http/handler/: invalid_input_exception_handler.py  item_already_exists_exception_handler.py  server_config_exception_handler.py  server_exception_handler.py
task_it/http/response/: exception_response.py
tests/: test__test.py
(+45 files in other folders)
